[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"

[workspace]
members = ["abc/*", "lib/*"]
resolver = "2"

# refs https://img.atcoder.jp/file/language-update/language-list.html
[workspace.dependencies]
ac-library-rs = { version = "=0.1.1" }
once_cell = { version = "=1.18.0" }
static_assertions = { version = "=1.1.0" }
varisat = { version = "=0.2.2" }
memoise = { version = "=0.3.2" }
argio = { version = "=0.2.0" }
bitvec = { version = "=1.0.1" }
counter = { version = "=0.5.7" }
hashbag = { version = "=0.1.11" }
pathfinding = { version = "=4.3.0" }
recur-fn = { version = "=2.2.0" }
indexing = { version = "=0.4.1" }
amplify = { version = "=3.14.2" }
amplify_derive = { version = "=2.11.3" }
amplify_num = { version = "=0.4.1" }
easy-ext = { version = "=1.0.1" }
multimap = { version = "=0.9.0" }
btreemultimap = { version = "=0.1.1" }
bstr = { version = "=1.6.0" }
az = { version = "=1.2.1" }
glidesort = { version = "=0.1.2" }
tap = { version = "=1.0.1" }
omniswap = { version = "=0.1.0" }
multiversion = { version = "=0.7.2" }
num = { version = "=0.4.1" }
num-bigint = { version = "=0.4.3" }
num-complex = { version = "=0.4.3" }
num-integer = { version = "=0.1.45" }
num-iter = { version = "=0.1.43" }
num-rational = { version = "=0.4.1" }
num-traits = { version = "=0.2.15" }
num-derive = { version = "=0.4.0" }
ndarray = { version = "=0.15.6" }
nalgebra = { version = "=0.32.3" }
alga = { version = "=0.9.3" }
libm = { version = "=0.2.7" }
rand = { version = "=0.8.5" }
getrandom = { version = "=0.2.10" }
rand_chacha = { version = "=0.3.1" }
rand_core = { version = "=0.6.4" }
rand_hc = { version = "=0.3.2" }
rand_pcg = { version = "=0.3.1" }
rand_distr = { version = "=0.4.3" }
petgraph = { version = "=0.6.3" }
indexmap = { version = "=2.0.0" }
regex = { version = "=1.9.1" }
lazy_static = { version = "=1.4.0" }
ordered-float = { version = "=3.7.0" }
ascii = { version = "=1.1.0" }
permutohedron = { version = "=0.2.4" }
superslice = { version = "=1.0.0" }
itertools = { version = "=0.11.0" }
itertools-num = { version = "=0.1.3" }
maplit = { version = "=1.0.2" }
either = { version = "=1.8.1" }
im-rc = { version = "=15.1.0" }
fixedbitset = { version = "=0.4.2" }
bitset-fixed = { version = "=0.1.0" }
proconio = { version = "=0.4.5" }
text_io = { version = "=0.1.12" }
rustc-hash = { version = "=1.1.0" }
smallvec = { version = "=1.11.0" }

# test macro
test-utils = { path = "./lib/test-utils" }